4271: Add view for four LOB case

--- a/project/src/main/res/layout/snippet_launch_list_header.xml
+++ b/project/src/main/res/layout/snippet_launch_list_header.xml
@@ -7,8 +7,14 @@
 
     <FrameLayout 
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_header_top_space">
+        android:layout_height="@dimen/launch_header_top_space"
+        android:visibility="gone">
+    </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_header_double_row_top_space"
+        android:visibility="visible">
     </FrameLayout>
 
     <FrameLayout
