--- a/project/src/main/res/layout/widget_phone_launch.xml
+++ b/project/src/main/res/layout/widget_phone_launch.xml
@@ -28,6 +28,13 @@
         android:id="@+id/lob_selector"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_lob_container_height"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:visibility="gone" />
+
+    <com.expedia.bookings.widget.LaunchLobDoubleRowWidget
+        android:id="@+id/double_row_lob_selector"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_lob_double_row_container_height"
         android:layout_marginTop="?attr/actionBarSize" />
 
     <include
