--- a/project/src/main/res/layout/fragment_itinerary_list.xml
+++ b/project/src/main/res/layout/fragment_itinerary_list.xml
@@ -74,26 +74,20 @@
 
                 <Button
                     android:id="@+id/login_button"
-                    style="@style/LoginFormButton"
+                    style="@style/ItinLoginRefreshButton"
                     android:layout_marginTop="0dp"
-                    android:background="@drawable/btn_cancel"
                     android:bufferType="spannable"
                     android:gravity="center"
-                    android:padding="12dp"
-                    android:textStyle="normal"
                     android:visibility="gone" />
 
                 <Button
                     android:id="@+id/no_trips_refresh_button"
-                    style="@style/LoginFormButton"
+                    style="@style/ItinLoginRefreshButton"
                     android:layout_marginTop="0dp"
-                    android:background="@drawable/btn_cancel"
                     android:bufferType="spannable"
                     android:contentDescription="@string/cd_trips_refresh_trips_list"
                     android:gravity="center"
-                    android:padding="12dp"
                     android:text="@string/refresh"
-                    android:textStyle="bold"
                     android:visibility="gone" />
             </LinearLayout>
 
