--- a/project/src/main/res/values-v21/styles_cars.xml
+++ b/project/src/main/res/values-v21/styles_cars.xml
@@ -15,6 +15,17 @@
         <item name="android:paddingRight">20dp</item>
     </style>
 
+    <style name="ItinLoginRefreshButton" parent="android:Widget.Material.Button">
+        <item name="android:background">@drawable/itin_login_ripple</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+    </style>
+
     <style name="Theme.AlertDialog" parent="android:Theme.Material.Light.Dialog.Alert">
         <item name="android:colorPrimary">@color/cars_primary_color</item>
         <item name="android:colorPrimaryDark">@color/cars_primary_color</item>
