--- a/project/src/main/res/layout/lx_dropdown_item.xml
+++ b/project/src/main/res/layout/lx_dropdown_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@drawable/spinner_ripple"
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
