--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.LX" parent="@style/Theme.AppCompat.Light">
+    <style name="V2.Theme.LX" parent="AppTheme.BaseLX"/>
+
+    <style name="AppTheme.BaseLX" parent="@style/Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
