--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -3,7 +3,7 @@
     <!-- VSC app name for the about screen-->
     <string name="vsc_full_app_name">Agence Voyages-sncf Hôtel</string>
 
-    <string name="app_name">Hôtel &amp; Vol Voyages-sncf</string>
+    <string name="app_name">Hôtel Voyages-sncf</string>
     <string name="app_vsc_info_url">http://www.voyages-sncf.com</string>
 
     <!-- The PointOfSale code looks this identifier up with reflection, do not remove! -->
