--- a/project/src/main/res/layout/include_tablet_coupon_container.xml
+++ b/project/src/main/res/layout/include_tablet_coupon_container.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/coupon_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -68,4 +68,4 @@
             android:textSize="@dimen/tablet_checkout_coupon_code_text_size"/>
     </RelativeLayout>
 
-</com.expedia.bookings.widget.LinearLayout>
+</LinearLayout>
