--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -39,6 +39,7 @@
 
         <item name="traveler_toolbar_text">@string/cars_driver_details_text</item>
         <item name="traveler_details_text">@string/enter_driver_details</item>
+        <item name="traveler_checkout_circle_drawable">@drawable/car_driver_checkout_circle</item>
         <item name="card_list_image_container_height">@dimen/car_search_list_image_container_height</item>
         <item name="card_details_container_height">@dimen/car_search_details_container_height</item>
         <!-- CVV attrs -->
