--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -43,6 +43,7 @@
 
         <item name="traveler_toolbar_text">@string/lx_traveler_details_text</item>
         <item name="traveler_details_text">@string/lx_traveler_enter_details_text</item>
+        <item name="traveler_checkout_circle_drawable">@drawable/lx_traveler_checkout_circle</item>
 
         <item name="card_list_image_container_height">@dimen/lx_search_list_image_container_height</item>
         <item name="card_details_container_height">@dimen/lx_search_details_container_height</item>
