--- a/project/src/main/res/layout/toolbar_checkmark_item.xml
+++ b/project/src/main/res/layout/toolbar_checkmark_item.xml
@@ -5,8 +5,10 @@
     android:layout_height="fill_parent"
     android:background="?android:attr/selectableItemBackground"
     android:drawableLeft="@drawable/ic_check_white_24dp"
+    android:paddingLeft="12dp"
     android:paddingRight="12dp"
-    android:textAllCaps="false"
+    android:drawablePadding="10dp"
+    android:textAllCaps="true"
     android:text="@string/search"
-    android:textSize="16sp"
-    android:textColor="?attr/primary_color" />
+    android:textSize="14sp"
+    android:textColor="#FFFFFF" />
