--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.CarSearchPresenter xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true">
@@ -8,80 +7,105 @@
     <LinearLayout
         android:id="@+id/search_container"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:background="#F9F9F9"
-        android:paddingTop="?attr/actionBarSize"
-        android:clipToPadding="false"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
         android:clipChildren="false"
-        android:layout_height="match_parent">
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:paddingTop="?attr/actionBarSize">
 
         <LinearLayout
-            android:id="@+id/location_container"
-            android:clipToPadding="false"
-            android:clipChildren="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/search_dropdown_padding"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:layout_alignParentTop="true"
-            android:orientation="horizontal">
+            android:background="@color/cars_primary_color"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:paddingBottom="4dp">
 
-            <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
-                android:id="@+id/pickup_location"
-                style="@style/CarAutocomplete"
-                android:layout_width="0dp"
-                android:layout_height="46dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:completionThreshold="1"
-                android:dropDownAnchor="@+id/location_container"
-                android:dropDownSelector="#FFFFFF"
-                android:hint="@string/pick_up_location"
-                android:imeOptions="actionDone"
-                android:inputType="textNoSuggestions" />
+            <LinearLayout
+                android:id="@+id/location_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="16dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:orientation="horizontal">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/dropoff_location"
-                style="@style/CarAutocomplete"
-                android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="1dp"
+                    android:src="@drawable/location"
+                    android:tint="#FFFFFF" />
+
+                <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
+                    android:id="@+id/pickup_location"
+                    style="@style/CarAutocomplete"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1.65"
+                    android:completionThreshold="1"
+                    android:dropDownAnchor="@+id/drop_down_anchor"
+                    android:dropDownHeight="fill_parent"
+                    android:dropDownSelector="#FFFFFF"
+                    android:dropDownWidth="fill_parent"
+                    android:hint="@string/pick_up_location"
+                    android:imeOptions="actionDone"
+                    android:inputType="textNoSuggestions" />
+
+                <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
+                    android:id="@+id/dropoff_location"
+                    style="@style/CarAutocomplete"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:completionHint="@string/drop_off_location"
+                    android:focusable="false"
+                    android:gravity="center_vertical"
+                    android:hint="@string/drop_off_location"
+                    android:inputType="none"
+                    android:textColor="#26FFFFFF"
+                    android:textColorHint="#26FFFFFF" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/drop_down_anchor"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+
+            <ToggleButton
+                android:id="@+id/select_date"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
                 android:layout_height="46dp"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:hint="@string/same_as_pick_up"
-                android:textColor="@color/search_dropdown_disabled_stroke"
-                android:textColorHint="@color/search_dropdown_disabled_stroke"
-                app:textStyle="normal" />
+                android:layout_below="@id/location_container"
+                android:drawableLeft="@drawable/date"
+                android:drawablePadding="24dp"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="20dp"
+                android:textAllCaps="false"
+                android:textColor="@drawable/cars_text_selector"
+                android:textOff="@string/select_pickup_and_dropoff_dates"
+                android:textOn="@string/select_pickup_and_dropoff_dates"
+                android:textSize="15sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
-        <ToggleButton
-            android:id="@+id/select_date"
-            style="?android:attr/borderlessButtonStyle"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@id/location_container"
-            android:layout_marginTop="@dimen/search_toggle_button_padding"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@drawable/cars_button_background_selector"
-            android:drawableLeft="@drawable/cars_button_circle"
-            android:drawablePadding="12dp"
-            android:textAllCaps="false"
-            android:paddingLeft="13dp"
-            android:gravity="left|center_vertical"
-            android:paddingRight="5dp"
-            android:textColor="@drawable/cars_text_selector"
-            android:textOff="@string/select_pickup_and_dropoff_dates"
-            android:textOn="@string/select_pickup_and_dropoff_dates"
-            android:textSize="14sp" />
+            android:layout_height="8dp"
+            android:background="@drawable/revers_drop_shadow" />
 
         <include
             android:id="@+id/calendar_container"
             layout="@layout/widget_car_date_time"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:layout_weight="1" />
@@ -90,8 +114,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:minHeight="?attr/actionBarSize" />
 
