--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -216,7 +216,7 @@
 
     <color name="cars_status_bar_color">#7E4569</color>
     <color name="cars_checkout_text_color">#676767</color>
-    <color name="cars_primary_color">#7E4569</color>
+    <color name="cars_primary_color">#99557F</color>
     <color name="cars_secondary_color">#915B7C</color>
     <color name="cars_tooltip_color">#915B7C</color>
     <color name="cars_tooltip_disabled_color">#9D9D9D</color>
@@ -233,6 +233,7 @@
     <color name="cars_launch_actionbar_color">#495863</color>
     <color name="cars_selected_tab_color">#5F717F</color>
     <color name="launch_tab_indicator">#FFED18</color>
+    <color name="cars_unchecked_toggle_text_color">#ECC3DC</color>
 
     <color name="bg_checkout_saved_traveler_cc_row">#f0f0f0</color>
     <color name="bg_checkout_saved_traveler_cc_row_pressed">#dcdcdc</color>
