--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -166,8 +166,24 @@
     </style>
 
     <style name="CarRobotoFont">
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="CarAutocomplete" parent="Widget.AppCompat.AutoCompleteTextView">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColorHint">#FFFFFF</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:theme">@style/CarAutocompleteTheme</item>
+    </style>
+
+    <style name="CarAutocompleteTheme">
+        <item name="colorControlNormal">#FFFFFF</item>
+        <item name="colorControlActivated">#FFFFFF</item>
+        <item name="colorControlHighlight">#FFFFFF</item>
     </style>
 
 </resources>
