--- a/project/src/main/res/layout/widget_lx_confirmation.xml
+++ b/project/src/main/res/layout/widget_lx_confirmation.xml
@@ -4,8 +4,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/lx_confirmation_action_background">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -22,7 +23,7 @@
                 android:background="@color/lx_confirmation_gradient" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/text_container"
                 android:layout_gravity="center"
@@ -34,6 +35,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
+                    android:layout_marginTop="10dp"
                     android:textSize="20sp"
                     app:textStyle="medium" />
 
@@ -60,6 +62,15 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
+                    android:textSize="13sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/itin_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:layout_marginTop="20dp"
                     android:textSize="13sp" />
             </LinearLayout>
 
