--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -263,7 +263,6 @@
     <color name="lx_confirmation_background">#1A1D20</color>
     <color name="lx_confirmation_action_text_color">#F3F3F3</color>
     <color name="lx_confirmation_email_text_color">#C8C8C8</color>
-    <color name="lx_sort_filter_background_color">#E4E4E4</color>
     <color name="lx_checkout_text_color">#676767</color>
     <color name="lx_dates_disabled_text_color">#D7D7D7</color>
     <color name="lx_secondary_color_disabled">#F6DAC0</color>
@@ -272,4 +271,7 @@
 
     <color name="search_dropdown_disabled_stroke">#C3C3C3</color>
     <color name="lx_sort_filter_text_color">#404040</color>
+    <color name="lx_sort_filter_pressed">#D9D9D9</color>
+    <color name="lx_sort_filter_top_bar_text_color">#5C5C5C</color>
+
 </resources>
