--- a/project/src/main/res/layout/widget_lx_sort_filter.xml
+++ b/project/src/main/res/layout/widget_lx_sort_filter.xml
@@ -1,92 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LXSortFilterWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.LXSortFilterWidget
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sort_filter_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEFEF"
     android:clickable="true"
-    android:padding="12dp"
     android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/sort_filter_top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="12dp">
 
-        <TextView
+        <com.expedia.bookings.widget.TextView
+            style="@style/LXFilterTitleTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
-            android:text="@string/lx_sort_filter"
-            android:textColor="#6a6a6a"
-            android:textSize="16dp"
+            android:layout_weight="1"
             android:gravity="left"
-            android:textStyle="bold" />
+            android:text="@string/lx_filter"/>
 
         <Button
             android:id="@+id/sort_filter_done_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:background="@drawable/ic_action_bar_checkmark_disabled"
-            android:gravity="right|center" />
-    </FrameLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Options"
-        android:textColor="@color/lx_primary_color" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/price_sort_button"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
+            style="@style/LXRobotoFont"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_check_white_24dp"
+            android:paddingLeft="16dp"
+            android:gravity="center|right"
+            android:text="@string/lx_apply_sort_filter"
             android:textAllCaps="false"
-            android:background="@drawable/lx_sort_button_selector"
-            android:text="@string/lx_price_sort_button"
-            android:textColor="@drawable/lx_sort_button_text_selector" />
-
-        <Button
-            android:id="@+id/popularity_sort_button"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:textAllCaps="false"
-            android:background="@drawable/lx_sort_button_selector"
-            android:text="@string/lx_popularity_sort_button"
-            android:textColor="@drawable/lx_sort_button_text_selector" />
+            android:textColor="@color/lx_sort_filter_top_bar_text_color"
+            android:textSize="16sp" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Categories"
-        android:textColor="@color/lx_primary_color" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
         android:scrollbars="none">
 
         <LinearLayout
-            android:id="@+id/filter_categories"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:paddingBottom="12dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:includeFontPadding="false"
+                android:text="@string/lx_sort_by"
+                android:textColor="@color/lx_primary_color" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="3dp"
+                app:cardElevation="1dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/price_sort_button"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/lx_sort_button_selector"
+                        android:text="@string/lx_price_sort_button"
+                        android:textAllCaps="false"
+                        android:textColor="@drawable/lx_sort_button_text_selector" />
+
+                    <Button
+                        android:id="@+id/popularity_sort_button"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/lx_sort_button_selector"
+                        android:text="@string/lx_popularity_sort_button"
+                        android:textAllCaps="false"
+                        android:textColor="@drawable/lx_sort_button_text_selector" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:text="@string/lx_categories"
+                android:textColor="@color/lx_primary_color" />
+
+            <LinearLayout
+                android:id="@+id/filter_categories"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" />
+
+        </LinearLayout>
     </ScrollView>
+
 </com.expedia.bookings.widget.LXSortFilterWidget>
