--- a/project/src/main/res/values/integers.xml
+++ b/project/src/main/res/values/integers.xml
@@ -283,5 +283,6 @@
     <integer name="lx_default_search_range">14</integer>
     <integer name="lx_offers_list_initial_size">3</integer>
     <integer name="lx_detail_content_description_max_lines">5</integer>
+    <integer name="lx_offer_ticket_default_count">2</integer>
 
 </resources>
