--- a/project/src/main/res/layout/actionbar_tab_bg.xml
+++ b/project/src/main/res/layout/actionbar_tab_bg.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="?android:attr/actionBarSize"
+    android:layout_gravity="center_horizontal"
+    android:background="?android:selectableItemBackground"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/tab_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/LaunchActionBarTabTextStyle" />
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@drawable/tab_text_selector"
+        android:textSize="14sp"
+        app:textStyle="medium" />
 
 </FrameLayout>
