--- a/project/src/main/res/layout/activity_phone_launch.xml
+++ b/project/src/main/res/layout/activity_phone_launch.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.DisableableViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/viewpager"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.expedia.bookings.widget.PhoneLaunchToolbar
+        android:id="@+id/launch_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/cars_launch_actionbar_color"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        style="@style/LaunchActionBar" />
+
+    <com.expedia.bookings.widget.DisableableViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
