Added more Omniture & fixes.
	1. Taking the amount from the API, Omniture requires it in the correct format.
	2. Corrected the amount, product id & checkout info page name.
	3. Added traveler, payment info, login, slide to purchase & CID Omniture.

--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -448,4 +448,8 @@
 
     <!-- Car Omniture tracking string when user see the slider -->
     <string name="car_omniture_checkout_no_credit_card">no card required</string>
+
+    <!-- LX Omniture tracking string when user see the slider -->
+    <string name="lx_omniture_checkout_no_credit_card">no card required</string>
+
 </resources>
