--- a/project/src/wotif/res/layout/fragment_phone_launch.xml
+++ b/project/src/wotif/res/layout/fragment_phone_launch.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_launch_wotif"
     android:orientation="vertical">
 
     <!-- ActionBar spacer -->
     <View
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize" />
+
+    <include layout="@layout/wotif_section_phone_launch_lob" />
 
     <LinearLayout
         android:id="@+id/error_container"
@@ -35,54 +38,4 @@
             android:textSize="17dp" />
         
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/scroll_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:splitMotionEvents="false">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="false"
-            android:background="@drawable/bg_launch_wotif"
-            android:scaleType="centerCrop" />
-
-        <View
-            android:id="@+id/content_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/launch_content_top_shadow" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom|center"
-            android:paddingBottom="50dp">
-
-            <TextView
-                android:id="@+id/wotif_flights"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/btn_tvly_flights"
-                android:gravity="center"
-                android:paddingRight="50dp"
-                android:text="@string/nav_flights"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_flights" />
-
-            <TextView
-                android:id="@+id/wotif_hotels"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/btn_tvly_hotels"
-                android:gravity="center"
-                android:text="@string/nav_hotels"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_hotels" />
-
-        </LinearLayout>
-    </RelativeLayout>
 </LinearLayout>
