Added sort & filter button animation.

--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -17,13 +17,12 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lx_search_results_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="50dp" />
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:id="@+id/sort_filter_button"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/lx_sort_filter_container_height"
             android:layout_gravity="bottom"
             android:gravity="center"
             android:background="@drawable/lx_sort_filter_selector"
