--- a/project/src/main/res/layout/section_lx_filter_row.xml
+++ b/project/src/main/res/layout/section_lx_filter_row.xml
@@ -8,8 +8,8 @@
     android:orientation="horizontal"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:paddingLeft="@dimen/lx_sort_filter_padding"
+    android:paddingRight="@dimen/lx_sort_filter_padding">
 
     <TextView
         android:id="@+id/category"
