--- a/project/src/main/res/layout/widget_lx_confirmation.xml
+++ b/project/src/main/res/layout/widget_lx_confirmation.xml
@@ -9,25 +9,33 @@
         android:background="@color/lx_confirmation_action_background">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight=".65">
 
             <com.expedia.bookings.widget.OptimizedImageView
                 android:id="@+id/confirmation_image_view"
                 android:layout_width="match_parent"
-                android:layout_height="215dp" />
+                android:layout_height="match_parent" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="215dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/lx_confirmation_gradient" />
 
             <LinearLayout
-                android:layout_width="270dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/text_container"
                 android:layout_gravity="center"
+                android:padding="30dp"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_activities_confirmation_checkmark" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/title"
@@ -48,16 +56,16 @@
                     android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/tickets"
+                    android:id="@+id/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/date"
+                    android:id="@+id/tickets"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -70,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:textSize="13sp" />
             </LinearLayout>
 
@@ -85,10 +93,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="#3A424C"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:gravity="center"
+            android:layout_weight=".35">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/reservation_confirmation_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/itin_white_text"
+                android:textSize="16sp"
+                app:textStyle="medium" />
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/confirmation_text"
@@ -96,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/lx_confirmation_email_text_color"
+                android:layout_marginTop="10dp"
                 android:textSize="12sp"
                 app:textStyle="light" />
 
