--- a/project/src/main/res/layout/widget_lx_detail_section_data.xml
+++ b/project/src/main/res/layout/widget_lx_detail_section_data.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="?attr/selectableItemBackground"
-    android:padding="15dp"
+    android:paddingBottom="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     android:id="@+id/section_container">
 
     <com.expedia.bookings.widget.TextView
@@ -13,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/lx_details_heading_text_color"
-        android:textSize="11sp"
+        android:textSize="12sp"
         android:textAllCaps="true"
         app:textStyle="bold" />
 
@@ -23,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/lx_details_content_text_color"
         android:lineSpacingExtra="3dp"
-        android:textSize="11sp"
+        android:textSize="12sp"
         app:textStyle="normal"/>
 
     <ImageButton
